--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,3 +7,14 @@ body,
   padding: 0;
   overflow: hidden;
 }
+
+.h-100 {
+  height: 100vh !important;
+}
+
+.bold-hr {
+  border: 0;
+  height: 1px;
+  background-color: #ffffff;
+}
+
